--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,124 @@
-anyio==4.4.0
-AnyQt==0.2.0
-asttokens==2.4.1
-attrs==24.2.0
-baycomp==1.0.3
-Bottleneck==1.4.0
-catboost==1.2.7
-cattrs==24.1.1
-certifi==2024.8.30
-cffi==1.17.1
+alabaster==0.7.12
+apturl==0.5.2
+Babel==2.10.3
+beautifulsoup4==4.12.3
+blinker==1.7.0
+Brlapi==0.8.5
+Brotli==1.1.0
+certifi==2023.11.17
 chardet==5.2.0
-charset-normalizer==3.3.2
-comm==0.2.2
-commonmark==0.9.1
-contourpy==1.3.0
-cryptography==43.0.1
-cycler==0.12.1
-debugpy==1.8.5
-decorator==5.1.1
-dictdiffer==0.9.0
-docutils==0.21.2
-et-xmlfile==1.1.0
-executing==2.1.0
-fonttools==4.53.1
-graphviz==0.20.3
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-idna==3.10
-ipykernel==6.29.5
-ipython==8.27.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.0.2
-jedi==0.19.1
-jeepney==0.8.0
-joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-keyring==25.4.0
-keyrings.alt==5.0.2
-kiwisolver==1.4.7
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-more-itertools==10.5.0
-nest-asyncio==1.6.0
-networkx==3.3
+click==8.1.6
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+cryptography==41.0.7
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+deprecation==2.0.7
+distlib==0.3.8
+distro==1.9.0
+distro-info==1.7+build1
+docutils==0.20.1
+eyed3==0.9.7
+feedparser==6.0.10
+filelock==3.13.1
+filetype==1.2.0
+furo==0.0.0
+html2text==2024.2.26
+httplib2==0.20.4
+idna==3.6
+ifaddr==0.2.0
+imagesize==1.4.1
+IMDbPY==2021.4.18
+iniconfig==1.1.1
+Jinja2==3.1.2
+joblib==1.3.2
+kazam==1.4.5
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+libevdev==0.5
+louis==3.29.0
+lxml==5.2.1
+Mako==1.3.2.dev0
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mutagen==1.46.0
+netaddr==0.8.0
+netifaces==0.11.0
+nltk==3.8.1
 numpy==1.26.4
-nvidia-nccl-cu12==2.23.4
-openpyxl==3.1.5
-openTSNE==1.0.2
-orange-canvas-core==0.2.2
-orange-widget-base==4.24.0
-Orange3==3.37.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
+oauthlib==3.2.2
+packaging==24.0
+PAM==0.4.2
 pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.3
-plotly==5.24.1
-prompt_toolkit==3.0.47
-psutil==6.0.0
+pillow==10.2.0
+platformdirs==4.2.0
+pluggy==1.4.0
+psutil==5.9.8
 ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.18.0
-pyparsing==3.1.4
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.15
-PyQt5_sip==12.15.0
-PyQt6==6.7.1
-PyQt6-Qt6==6.7.2
-PyQt6_sip==13.8.0
-pyqtgraph==0.13.7
-PyQtWebEngine==5.15.7
-PyQtWebEngine-Qt5==5.15.15
-python-dateutil==2.9.0.post0
-python-louvain==0.16
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-qasync==0.27.1
-qtconsole==5.6.0
-QtPy==2.4.1
-requests==2.32.3
-requests-cache==1.2.1
-scikit-learn==1.4.2
-scipy==1.14.1
-seaborn==0.13.2
-SecretStorage==3.3.3
-serverfiles==0.3.1
+pyasyncore==1.0.2
+pycairo==1.25.1
+pycryptodomex==3.20.0
+pycups==2.0.1
+pycurl==7.45.3
+pyelftools==0.30
+Pygments==2.17.2
+PyGObject==3.48.2
+PyICU==2.12
+pyinotify==0.9.6
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pyparsing==3.1.1
+pyparted==3.12.0
+pypng==0.20231004.0
+pytest==7.4.4
+python-apt==2.7.7+ubuntu3
+python-debian==0.1.49+ubuntu2
+python-gnupg==0.5.2
+python-magic==0.4.27
+python-xlib==0.33
+pytz==2024.1
+pyudev==0.24.0
+pyxdg==0.28
+PyYAML==6.0.1
+qrcode==7.4.2
+regex==2022.10.31
+repolib==2.2.1
+requests==2.31.0
+requests-file==1.5.1
+rich==13.7.1
+roman==3.3
+screen-resolution-extra==0.0.0
+setproctitle==1.3.3
+setuptools==68.1.2
+sgmllib3k==1.0.0
+simplejson==3.19.2
 six==1.16.0
-sniffio==1.3.1
-stack-data==0.6.3
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-url-normalize==1.4.3
-urllib3==2.2.3
-wcwidth==0.2.13
-xgboost==2.1.1
+snowballstemmer==2.2.0
+soupsieve==2.5
+Sphinx==7.2.6
+sphinx-basic-ng==1.0.0b2
+sphinx_inline_tabs==2023.4.21
+systemd-python==235
+tinycss2==1.2.1
+tldextract==3.1.2
+tqdm==0.0.0
+typing_extensions==4.10.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.2
+Unidecode==1.3.8
+urllib3==2.0.7
+virtualenv==20.25.0+ds
+wadllib==1.3.6
+webencodings==0.5.1
+websockets==10.4
+wheel==0.42.0
+xdg==5
+xkit==0.0.0
 xlrd==2.0.1
-XlsxWriter==3.2.0
+yt-dlp==2024.4.9
